# auxetic-lace-atlas

./: .gitattributes  .gitignore  AUX_MAT_PROJECT_STATUS.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  add_summary_moduli.py  fix_source_field.py  integrate_face_set_family.py  integrate_sweep_results.py  pyproject.toml  recompute_moduli.py  recompute_nu_profiles.py  render_all_anisotropy.py  render_taylor_thumbnails.py  rerender_all_deformed.py  verify_family_against_atlas.py  visualizer_catalog_patch.py
.github/workflows/: deploy-pages.yml
analysis/: analyze_features.py  analyze_humidity_class.py  extract_features.py  features.csv
docs/: CNAME  about.html  atlas_features.csv  data.html  index.html  style.css
src/auxetic_lace/: __init__.py  bobbin_lace_constructor.py  build_atlas.py  build_demo_atlas.py  build_thumbnails.py  canonicalize.py  compute_family.py  enumerator_pipeline.py  humidity.py  lace_constructor.py  lace_workability.py  manufacturability.py  mechanics.py  mechanics_beam.py  parse_to_graph.py  phonons.py  planarity.py  pore_response.py  render_anisotropy.py  render_dispersion.py  render_enumerated_thumbnails.py  render_lace_deformed.py  render_lace_view.py  scrape_tesselace.py  thermal_response.py  visualize_auxetics.py
src/auxetic_lace/canonical/: __init__.py  brute_force.py
src/auxetic_lace/contrib/: README.md  __init__.py  add_to_local_atlas.py  compute_submission.py  rank_submission.py  submission_schema.py  validate_submission.py
submission_examples/: reentrant.json  square.json  triangular.json
submissions/: README.md
tests/: test_beam_mechanics.py  test_contribution.py
visualizer/: about.html  index.html  style.css
